# rsi-project

./: README.md
csv-to-redpanda/: .gitmodules  csv_to_redpanda.js  docker-compose.yml  ingest.js  package-lock.json  package.json  parse_csv.js  trades_data.json
redpanda-rsi-calculator/: Cargo.toml
redpanda-rsi-calculator/src/: fix_topics.rs  main.rs  producer.rs  test_redpanda.rs
