[package]
name = "redpanda-rsi-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"

[[bin]]
name = "redpanda-rsi-calculator"
path = "src/main.rs"

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "test_redpanda"
path = "src/test_redpanda.rs"

[[bin]]
name = "fix_topics"
path = "src/fix_topics.rs"